adding open-api and vacancy service
