# src/main/java/com/web3/with/controller/VacancyController.java
@@ -5,12 +5,11 @@ import lombok.RequiredArgsConstructor;
 import org.openapitools.api.VacanciesApi;
 import org.openapitools.model.VacanciesRs;
 import org.openapitools.model.VacancyDTO;
+import org.openapitools.model.VacancyRq;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 @RequestMapping("api/v1")
@@ -20,9 +19,12 @@ public class VacancyController implements VacanciesApi {
     private final VacancyService vacancyService;
 
     @Override
-    public ResponseEntity<VacanciesRs> getVacancies() {
-
-//        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    public ResponseEntity<VacanciesRs> getVacancies(String contentType, VacancyRq vacancyRq) {
         return new ResponseEntity<>(vacancyService.getVacancies(), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<VacancyDTO> getVacancyById(Long id) {
+        return VacanciesApi.super.getVacancyById(id);
     }
 }
