# src/main/java/com/web3/with/entity/EmployerEntity.java
@@ -1,0 +1,26 @@
+package com.web3.with.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
+import lombok.Data;
+
+@Data
+@Entity
+@Table(name="employer")
+public class EmployerEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(name = "company_name")
+    private String companyName;
+
+    @Column(name = "email")
+    private String email;
+
+}
