# src/main/java/com/web3/with/entity/VacancyEntity.java
@@ -1,12 +1,20 @@
 package com.web3.with.entity;
 
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.JoinTable;
+import jakarta.persistence.ManyToMany;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
 import lombok.Data;
+
+import java.util.HashSet;
+import java.util.Set;
 
 @Data
 @Entity
@@ -22,4 +30,25 @@ public class VacancyEntity {
 
     @Column(name = "description")
     private String description;
+
+    @ManyToOne
+    @JoinColumn(name = "employer_id")
+    private EmployerEntity employer;
+
+    @Column(name = "salary")
+    private String salary;
+
+    @Column(name = "workMode")
+    private String workMode;
+
+    @Column(name = "location")
+    private String location;
+
+    @ManyToMany(cascade = {CascadeType.DETACH, CascadeType.MERGE, CascadeType.PERSIST, CascadeType.REFRESH})
+    @JoinTable(
+            name = "vacancy_tag",
+            joinColumns = {@JoinColumn(name = "vacancy_id")},
+            inverseJoinColumns = {@JoinColumn(name = "tag_id")}
+    )
+    private Set<TagEntity> tagList = new HashSet<>();
 }
