# src/main/resources/openapi.yaml
@@ -1,17 +1,31 @@
-openapi: 3.0.0
+openapi: 3.1.0
 info:
   title: API of service WEB3.WITH
   description: Operations of service
   version: 1.0.0
 servers:
-  - url: /main
+#  - url: /main
 paths:
   /vacancies:
-    get:
-      summary: Получение списка вакансий
+    post:
+      summary: Get a list of vacancies
       operationId: getVacancies
       tags:
         - Vacancies
+      parameters:
+        - in: header
+          name: Content-Type
+          required: true
+          schema:
+            type: string
+            enum:
+              - application/json
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/VacancyRq'
       responses:
         '200':
           description: OK
@@ -19,8 +33,61 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/VacanciesRs'
+        '500':
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WithAppExceptionDTO'
+  /vacancy/{id}:
+    get:
+      summary: Получение вакансии по ID
+      description: Возвращает информацию о вакансии по указанному ID.
+      operationId: getVacancyById
+      tags:
+        - Vacancies
+      parameters:
+        - name: id
+          in: path
+          description: ID вакансии для получения информации
+          required: true
+          schema:
+            type: integer
+            format: int64
+            example: 123
+      responses:
+        '200':
+          description: Вакансия успешно найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/VacancyDTO'
+        '404':
+          description: Вакансия не найдена
+
 components:
   schemas:
+    VacancyRq:
+      type: object
+      properties:
+        page:
+          type: integer
+          format: int64
+#        size:
+#          type: integer
+#          format: int64
+
+    VacanciesRs:
+      type: object
+      properties:
+        vacancies:
+          type: array
+          description: Array of vacancies
+          items:
+            $ref: '#/components/schemas/VacancyPreviewDTO'
+        isLastPage:
+          type: boolean
+
     VacancyDTO:
       type: object
       properties:
@@ -31,10 +98,54 @@ components:
           type: string
         description:
           type: string
-    VacanciesRs:
+        location:
+          type: string
+        workMode:
+          type: string
+          description: Format of work
+          example: "Remote"
+        salary:
+          type: integer
+        companyName:
+          type: string
+        tags:
+          type: array
+          description: Array of tags
+          items:
+            $ref: '#/components/schemas/TagDTO'
+
+    VacancyPreviewDTO:
       type: object
       properties:
-        vacancies:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        salary:
+          type: integer
+        companyName:
+          type: string
+        tags:
           type: array
+          description: Array of tags
           items:
-            $ref: '#/components/schemas/VacancyDTO'
+            $ref: '#/components/schemas/TagDTO'
+
+    TagDTO:
+      type: object
+      properties:
+        name:
+          type: string
+
+    WithAppExceptionDTO:
+      type: object
+      properties:
+        code:
+          type: integer
+          description: Error code
+          example: 1
+        message:
+          type: string
+          description: Error message
+          example: "Error while validating"
